Fix memory slider alignment on Firefox, IE, and Edge

--- a/AzureFunctions.Client/styles/app-settings.style.css
+++ b/AzureFunctions.Client/styles/app-settings.style.css
@@ -49,7 +49,6 @@ h2 {
 
 input[type=range] {
     -webkit-appearance: none;
-    width: 60%;
     display: inline-block;
 }
 
